# bitwarden-eso-provider

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.md.bak  SECURITY.md  SUPPORT.md  deny.toml  justfile  mise.toml  sonar-project.properties
.cargo/: config.toml  mutants.toml
.github/: dependabot.yml  labels.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  release_checklist.yml  support_question.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  fuzz.yml  kind-integration.yml  release.yml  scorecard.yml
crates/bitwarden-eso-provider/: Cargo.toml
crates/bitwarden-eso-provider/src/: lifecycle.rs  main.rs  metrics.rs
crates/bweso-bitwarden/: Cargo.toml
crates/bweso-bitwarden/fuzz/: .gitignore  Cargo.toml  README.md
crates/bweso-bitwarden/fuzz/corpus/encrypted_string_from_str/: legacy_no_mac.txt  valid_aes_cbc_hmac.txt
crates/bweso-bitwarden/fuzz/fuzz_targets/: encrypted_string_from_str.rs
crates/bweso-bitwarden/src/: api.rs  cipher.rs  crypto.rs  keys.rs  lib.rs
crates/bweso-bitwarden/tests/: live_bitwarden.rs
crates/bweso-core/: Cargo.toml
crates/bweso-core/src/: lib.rs
crates/vaultwarden-eso-provider/: Cargo.toml
crates/vaultwarden-eso-provider/src/: lifecycle.rs  main.rs  metrics.rs
crates/vwso-core/: Cargo.toml
crates/vwso-core/src/: lib.rs
crates/vwso-eso-webhook/: Cargo.toml
crates/vwso-eso-webhook/src/: main.rs
crates/vwso-vaultwarden/: Cargo.toml
crates/vwso-vaultwarden/src/: api.rs  cipher.rs  crypto.rs  keys.rs  lib.rs
crates/vwso-vaultwarden/tests/: live_vaultwarden.rs
deploy/eso/: README.md  clustersecretstore.warning.example.yaml  externalsecret.example.yaml  networkpolicy-bitwarden-cloud.example.yaml  networkpolicy-eso-ingress.example.yaml  networkpolicy-vaultwarden-in-cluster.example.yaml  reloader.example.yaml  secret-types.example.yaml  secretstore-webhook-map.example.yaml  secretstore-webhook.example.yaml  selector-policy-configmap.example.yaml  whole-item.example.yaml
deploy/helm/: README.md  lint-values.yaml
deploy/helm/bitwarden-eso-provider/: Chart.yaml  values.schema.json  values.yaml
deploy/helm/bitwarden-eso-provider/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  servicemonitor.yaml
deploy/helm/vaultwarden-eso-provider/: Chart.yaml  values.schema.json  values.yaml
deploy/helm/vaultwarden-eso-provider/templates/: NOTES.txt  _helpers.tpl  ca-bundle-secret.yaml  deployment.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
deploy/helm/vaultwarden-secrets-operator/: Chart.yaml  values.yaml
deploy/helm/vaultwarden-secrets-operator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  networkpolicy.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: architecture.md  compatibility.md  crypto-notes.md  github-wiki.md  index.md  live-testing.md  public-readiness-plan.md  public-release-checklist.md  reference-map.md  release-verification.md  repository-governance.md  roadmap.md  selectors-and-policy.md  threat-model.md
docs/decisions/: 0001-use-eso-webhook-first.md  0002-do-not-adopt-bitwarden-sdk.md  0003-keep-handrolled-prometheus-emitter.md  0004-hot-reloadable-selector-policy.md
docs/install/: eso-webhook.md
docs/operations/: migration-runbook.md  observability.md  restarts.md
examples/: README.md
examples/grafana/: bitwarden-eso-provider-dashboard.json  vaultwarden-eso-provider-dashboard.json
examples/prometheus/: bitwarden-eso-provider-rules.yaml  vaultwarden-eso-provider-rules.yaml
scripts/: helm-policy-contracts.sh  kind-vaultwarden-bootstrap.sh  live-eso-smoke.sh  verify-release-version.sh
