[workspace]
members = [
    "crates/bweso-core",
    "crates/bweso-bitwarden",
    "crates/vaultwarden-eso-provider",
]
exclude = ["crates/bweso-bitwarden/fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0"
authors = ["Ponchia"]
repository = "https://github.com/ponchia/vaultwarden-eso-provider"
homepage = "https://github.com/ponchia/vaultwarden-eso-provider"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
aes = "0.9"
argon2 = { version = "0.5", features = ["alloc", "zeroize", "std"], default-features = false }
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
cbc = { version = "0.1", features = ["block-padding"] }
clap = { version = "4.5", features = ["derive", "env"] }
hkdf = "0.13"
hmac = "0.13"
http = "1.1"
pbkdf2 = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
subtle = { version = "2.6", default-features = false }
thiserror = "2.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tower = { version = "0.5", features = ["util", "limit", "load-shed"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
zeroize = "1.8"
