[package]
name = "bweso-bitwarden"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Bitwarden Password Manager and Vaultwarden client library for Bitwarden ESO Provider"
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
aes.workspace = true
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
cbc.workspace = true
hkdf.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
bweso-core = { version = "0.1.0", path = "../bweso-core" }
zeroize.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
