[package]
name = "bweso-core"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared External Secrets Operator webhook types for Bitwarden ESO Provider"
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
