[package]
name = "vaultwarden-eso-provider"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "External Secrets Operator webhook provider for Vaultwarden and Bitwarden Password Manager"
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
http.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
bweso-core = { version = "0.2.0", path = "../bweso-core" }
bweso-bitwarden = { version = "0.2.0", path = "../bweso-bitwarden" }

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tower.workspace = true
