[package]
name = "vwso-eso-webhook"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
http.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vwso-core = { path = "../vwso-core" }
vwso-vaultwarden = { path = "../vwso-vaultwarden" }

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tower.workspace = true
