[package]
name = "vwso-vaultwarden"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
aes.workspace = true
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
cbc.workspace = true
hkdf.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
secrecy.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
vwso-core = { path = "../vwso-core" }
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
